Infrastructure/CD/k8s/Components/ui/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: developer-environment
  labels:
    name: developer-environment
    environment: development
