Infrastructure/CD/k8s/Components/ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: developer-environment
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
